# ohbemn

./: .envrc  .gitignore  Cargo.toml  README.md  environment.yml  pyproject.toml
.github/workflows/: CI.yml.disabled  python.yml  rust.yml
examples/: Breakwater diffusion.ipynb  Partially reflective boundary.ipynb  Rectangular interior.ipynb  Sources.ipynb  Stages of a simulation.ipynb  Transparent region.ipynb  different_depths.py  nazare_scatter.py  rectangular_interior.py  scatter_depth.py  transparent_region.py
paper/: .gitignore  Makefile  distfig.py  main.tex  ohbemn.bib
python/ohbemn/: __init__.py  boundary.py  geometry.py  intop.py  solver.py  source.py  wave.py
python/ohbemn/ohpy/: __init__.py  geometry.py  intop.py  kirby1983.py  rcoeff.py  solver.py  source.py  wave.py
python/tests/: test_all.py  test_exterior_square.py  test_interior_square.py  test_rcoeff.py  test_region.py  test_wave.py  test_zero_bc.py
src/: boundary.rs  geometry.rs  integrators.rs  lib.rs  solver.rs
