[package]
name = "ohbemn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ohbemn"
crate-type = ["cdylib"]

[dependencies]
complex-bessel-rs = "1.2.1"
gauss-quad = "0.2.2"
ndarray = { version="0.15.6", features = ["blas"]}
blas-src = { version = "0.10.0", default-features = false, features = ["netlib"] }
ndarray-linalg = "0.16.0"
num = "0.4.3"
numpy = { version = "0.23.0" }
pyo3 = { version = "0.23.1", features = [ "num-complex" ] }
