[package]
name = "ohbemn"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ohbemn"
crate-type = ["cdylib"]

[dependencies]
complex-bessel-rs = "1.2.1"
ndarray = { version="0.15", features = ["blas", "approx", "rayon"]}
# blas-src = { version = "0.10.0", default-features = false, features = ["netlib"] }
netlib-src = { version = "0.9.0" }
ndarray-linalg = "0.16.0"
num = { version = "0.4.3", features = [ "libm" ] }
numpy = { version = "0.23.0" }
pyo3 = { version = "0.23.1", features = [ "num-complex", "abi3-py39" ] }
approx = { version = "0.5.1", features = [ "num-complex" ] }

[features]
static =  [ "netlib-src/static" ]
